--- a/index.html
+++ b/index.html
@@ -11,15 +11,37 @@ que tienen y como se interconectan.</P>
 
 <P>Se explican los dos tipos de organizaciones principales, Von Neumann y Harvard,
 y se ven cuales son las caracteristicas de cada una de estas organizaciones.</P>
+<img src="imagenes/foto1.jpg">
 
 <P>Asimismo, se presentan los dos tipos de computadores que utilizan habitualmente
 arquitectura Harvard:</P>
+<img src="imagenes/foto3.jpg"> 
 <ul>
 <li> Los microcontroladores.</li>
 <li> Los procesadores digitales de señales (DSP).</li>
 </ul>
-<P>Finalmente, se realiza una explicacion breve sobre la evolucion de los computadores
+
+<p> Finalmente, se realiza una explicacion breve sobre la evolucion de los computadores
 desde las primeras maquinas electrónicas de calculo hasta los computadores
 actuales, y se muestra la organizacion de los microprocesadores multinucleo.</P>
+
+<TABLE BORDER=5> 
+<TR>
+<TD>SISTEMA OPERATIVO </TD>
+<TD>CREADOR </TD>
+<TD>CREADOR </TD>
+</TR>
+
+<TR>
+<TD>WINDOWS </TD>
+<TD>BILL GATES </TD>
+</TR>
+
+<TR>
+<TD>LINUX </TD>
+<TD>LINUS TORVAL</TD>
+</TR>
+
+</TABLE>
 </BODY>
 </HTML>
